Test support for http2. Doesnt work